# mailtg-bridge

./: .env.example  .gitignore  CODE-REVIEW.md  CODEX-DESIGN-BRIEF.md  CODEX-IMPL-BRIEF.md  DESIGN-REVIEW.md  DESIGN.md  README.md  masterspec-config.yaml  pyproject.toml
_input/: arch-sketch.md  tickets.md
deploy/: mailtg-bridge.env.example  mailtg-bridge.service
masterspec/: 00-glossary.md  00-masterspec-index.md  migration-report.md  route-run-evolve.md  route-run-req.md  route-run-spec.md  verify-report-req-glm.md  verify-report-spec-glm.md  verify-response-req.md  verify-response-spec.md
masterspec/01-requirements/01-system/: as-mailtg-bridge.md
masterspec/01-requirements/02-functions/: fn-bridge-control-by-email.md  fn-channel-update-to-email.md  fn-dm-batch-to-email.md  fn-email-reply-to-tg.md  fn-first-run-setup.md  fn-media-in-email.md
masterspec/01-requirements/03-nfr/: nfr-deployability.md  nfr-operability.md  nfr-portability.md  (+2 more)
masterspec/04-decisions/: adr-001-python-core-reuse.md  adr-002-telethon-hybrid-auth.md
src/mailtg_bridge/: __init__.py  __main__.py  algorithms.py  commands.py  config.py  domain.py  errors.py  locking.py  logging.py  mail_in.py  mail_out.py  orchestrator.py  ports.py  setup.py  state.py  telegram.py
src/mailtg_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: helpers.py
tests/contract/: test_telegram.py
tests/integration/: test_flows.py
tests/unit/: test_algorithms.py  test_commands.py  test_config.py  test_mail_in.py  test_mail_out.py  test_runtime.py  test_state.py
(+81 files in other folders)
